tests-integration/fixtures/checking/1772567580_derive_bifunctor_higher_kinded/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
WrapBoth ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> Type)
    (@a :: (t :: Type)) (@b :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    (g :: (t1 :: Type) -> Type) (b :: (t1 :: Type)) ->
    WrapBoth @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> Type)
      (a :: (t :: Type))
      (b :: (t1 :: Type))
WrapBothNoConstraint ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> Type)
    (@a :: (t :: Type)) (@b :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    (g :: (t1 :: Type) -> Type) (b :: (t1 :: Type)) ->
    WrapBothNoConstraint @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> Type)
      (a :: (t :: Type))
      (b :: (t1 :: Type))

Types
WrapBoth ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> Type) -> (t :: Type) -> (t1 :: Type) -> Type
WrapBothNoConstraint ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> Type) -> (t :: Type) -> (t1 :: Type) -> Type

Derived
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Functor (t :: Type -> Type) =>
  Functor (t1 :: Type -> Type) =>
  Bifunctor (WrapBoth @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Bifunctor (WrapBothNoConstraint @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))

Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]
WrapBothNoConstraint = [Representational, Representational, Nominal, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (t :: Type -> Type)
  --> 10:1..10:53
   |
10 | derive instance Bifunctor (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Functor (t1 :: Type -> Type)
  --> 10:1..10:53
   |
10 | derive instance Bifunctor (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
